[gd_scene load_steps=10 format=2]

[ext_resource path="res://models/door_frame.obj" type="ArrayMesh" id=1]
[ext_resource path="res://objects/Door.gd" type="Script" id=2]
[ext_resource path="res://objects/DoorViewport.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.125, 3.25, 1.5 )

[sub_resource type="PlaneMesh" id=14]
size = Vector2( 7, 3 )

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.498039, 0.498039, 0.498039, 1 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.3, 3.5, 0.25 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.3, 0.25, 2 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0, 3.25, 1.5 )

[node name="Door" type="MeshInstance"]
mesh = ExtResource( 1 )
material/0 = null
script = ExtResource( 2 )

[node name="Interact" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.25, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Interact"]
shape = SubResource( 2 )

[node name="DoorViewport" parent="." instance=ExtResource( 3 )]

[node name="DoorBack" type="MeshInstance" parent="."]
transform = Transform( -4.45856e-008, -1, 0, 1.02, -4.37114e-008, 0, 0, 0, 1.02, 0.3, 3.5, 0 )
mesh = SubResource( 14 )
material/0 = SubResource( 15 )

[node name="FrameCollision" type="StaticBody" parent="."]
editor/display_folded = true

[node name="FrameLeft" type="CollisionShape" parent="FrameCollision"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, -1.75 )
shape = SubResource( 11 )

[node name="FrameRight" type="CollisionShape" parent="FrameCollision"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 1.75 )
shape = SubResource( 11 )

[node name="FrameTop" type="CollisionShape" parent="FrameCollision"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.75, 0 )
shape = SubResource( 12 )

[node name="DoorEnter" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 3.25, 0 )

[node name="CollisionShape" type="CollisionShape" parent="DoorEnter"]
shape = SubResource( 13 )
[connection signal="area_entered" from="Interact" to="." method="_on_Interact_area_entered"]
[connection signal="area_exited" from="Interact" to="." method="_on_Interact_area_exited"]
[connection signal="body_entered" from="DoorEnter" to="." method="_on_DoorEnter_body_entered"]
